# AstroSmrkRust

./: .gitignore  Notes.md  README.md  package.json
.github/workflows/: build.yml
backup/rust_code_concepts/: lib.rs  settings.db  settings_duck.db  storage_duck.rs  storage_sqlite.rs  swiss_ephem.rs
backup/rust_code_concepts/translations/: english.json
backup/themes/: dracula_dark.json  nord_dark.json
docs/: architecture.md
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  storage.rs
src/lib/: CollapsibleSection.svelte  InputGroup.svelte  Navigation.svelte  Zodiac.svelte  Zodiac_custom.svelte  Zodiac_custom_move.svelte  Zodiac_custom_y.svelte
src/lib/themes/: nord_light.json  solarized_dark.json  solarized_light.json
src/lib/translations/: index.js  lang.js
src/lib/translations/cs/: all.json  index.js
src/lib/translations/en/: all.json  news.json
src/routes/: +page.svelte
